--- a/dsp_backend/requirements.txt
+++ b/dsp_backend/requirements.txt
@@ -28,6 +28,8 @@ Pygments==2.19.1
 pytest==8.3.5
 python-dotenv==1.1.0
 python-multipart==0.0.20
+PyJWT==2.10.1
+passlib[bcrypt]==1.7.4
 PyYAML==6.0.2
 rich==14.0.0
 rich-toolkit==0.14.1
