--- a/dsp_backend/.env.example
+++ b/dsp_backend/.env.example
@@ -1,37 +1,21 @@
-# DSP Backend (.env.example)
-# Copy this file to .env and adjust values for your environment.
-# The FastAPI backend reads these via python-dotenv in src/api/config.py.
+# DSP Backend .env.example
+# Copy to .env and override as needed. These defaults are development-safe.
 
-# General app info
-APP_NAME="DSP Backend API"
-APP_DESCRIPTION="Handles API requests, user authentication logic, connects to SQLite database, and relays queries to the internal DSP endpoint."
-APP_VERSION="0.1.0"
+# SQLite DB path (container-local). For Rancher/Docker, mount a volume at dsp_db/ if you need persistence.
+DB_FILE=dsp_db/dsp.db
 
-# Database configuration
-# Path to the SQLite database file. In a multi-container setup, mount or point
-# this to the db container's volume/path (e.g., /data/myapp.db) or a shared volume.
-DB_FILE="../natural-query-processing-platform-96847-96858/dsp_db/myapp.db"
+# JWT settings (use strong secrets in production!)
+JWT_SECRET=dev-only-change-me
+JWT_ALG=HS256
+JWT_EXPIRES_MIN=120
 
-# JWT (Auth) configuration
-# IMPORTANT: Change JWT_SECRET in production!
-JWT_SECRET="change-me-in-env"
-JWT_ALG="HS256"
-# Expiration in minutes
-JWT_EXPIRES_MIN="60"
+# Internal DSP service base URL (proxied by /dsp/query)
+DSP_INTERNAL_BASE=http://10.45.30.64
+DSP_TIMEOUT_SEC=30
 
-# DSP internal service config
-# Base URL of the internal DSP service to proxy to, no trailing slash.
-# Example: http://10.45.30.64  (as per work item description)
-DSP_INTERNAL_BASE="http://10.45.30.64"
-# Timeout in seconds for upstream DSP calls
-DSP_TIMEOUT_SEC="30"
-
-# CORS configuration
-# Comma-separated list of allowed origins; use * to allow all (not recommended for production).
-# Example for local dev with React at 3000:
-# CORS_ALLOW_ORIGINS="http://localhost:3000,https://vscode-internal-16141-beta.beta01.cloud.kavia.ai:3000"
-CORS_ALLOW_ORIGINS="*"
+# CORS allowed origins (comma-separated)
+CORS_ALLOW_ORIGINS=http://localhost:3000
 
 # Notes:
-# - These map directly to Settings in src/api/config.py
-# - Do not commit real secrets. This example is safe to commit.
+# - The FastAPI app should bind to 0.0.0.0 in containers (done by uvicorn start config).
+# - DB_FILE path is container-local by default; mount a volume to persist.
